[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Julian V. <jvesper95@gmail.com>"]
edition = "2018"

[lib]
name = "helper"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
